compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__unqualified_to_qualified_import_multiple_line_bad_format_without_trailing_comma.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 3155
expression: "\nimport option.{type Option,\n    Some\n\n}\n\npub fn main() {\n  Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{type Option,
    Some

}

pub fn main() {
  Some(1)
  ▔▔▔▔↑  
}


----- AFTER ACTION

import option.{type Option,
    

}

pub fn main() {
  option.Some(1)
}
