compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__unqualified_to_qualified_import_record_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2817
expression: "\nimport user.{type User, User}\n\npub fn create_user(name: String) -> User {\n    User(name: name, id: 1)\n}\n"
---
----- BEFORE ACTION

import user.{type User, User}

pub fn create_user(name: String) -> User {
    User(name: name, id: 1)
    ▔▔▔▔▔↑                 
}


----- AFTER ACTION

import user.{type User, }

pub fn create_user(name: String) -> User {
    user.User(name: name, id: 1)
}
