compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__unqualified_to_qualified_import_with_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2962
expression: "\nimport list.{map as transform}\n\npub fn double_list(items: List<Int>) -> List<Int> {\n    transform(items, fn(x) { x * 2 })\n}\n"
---
----- BEFORE ACTION

import list.{map as transform}

pub fn double_list(items: List<Int>) -> List<Int> {
    transform(items, fn(x) { x * 2 })
    ▔▔▔▔▔▔▔▔▔▔↑                      
}


----- AFTER ACTION

import list.{}

pub fn double_list(items: List<Int>) -> List<Int> {
    list.map(items, fn(x) { x * 2 })
}
